add lemma annotation query